--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-844.6KB/s(Youtube:不良林), server: 213.183.51.172, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇨🇳 中国-421.5KB/s(Youtube:不良林), server: zh01lv5ge02.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 90a7d86e-6f6a-4230-b89b-03cfd7fe70dc}
-  - {name: 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林), server: 213.183.53.200, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林), server: 213.183.53.222, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林), server: 213.183.53.200, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林), server: 213.183.53.200, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林), server: 185.167.116.38, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
+  - {name: 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林), server: 185.167.116.38, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 塞浦路斯-1.84MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林), server: 213.183.53.200, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
   - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2, server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
+      - 塞浦路斯-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
+      - 塞浦路斯-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
+      - 塞浦路斯-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
+      - 塞浦路斯-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
+      - 塞浦路斯-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
+      - 塞浦路斯-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-844.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-332.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-688.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.82MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.72MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
+      - 塞浦路斯-1.84MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林) 2
-      - 🇷🇺 俄罗斯联邦-700.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
