--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林), server: 185.167.116.38, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林), server: 213.183.53.208, port: 9098, type: ss, cipher: aes-256-cfb, password: aLpQtfEZe445QyHk}
-  - {name: 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林), server: 185.167.116.38, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林), server: 213.183.53.177, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇨🇳 中国-164.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林), server: 185.167.116.253, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇺🇸 美国-6.83MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.66MB/s(Youtube:不良林), server: 213.183.51.172, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林), server: 213.183.53.200, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇳🇱 荷兰-1.60MB/s(Youtube:不良林), server: 213.183.59.218, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林), server: 213.183.53.221, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
   - {name: 塞浦路斯-1.84MB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林), server: 213.183.53.200, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 213.183.53.177, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
   - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林), server: 213.183.53.200, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 塞浦路斯-1.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 塞浦路斯-1.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 塞浦路斯-1.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 塞浦路斯-1.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 塞浦路斯-1.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 塞浦路斯-1.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.18MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.42MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.41MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-557.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-164.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-180.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.83MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.66MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.60MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.53MB/s(Youtube:不良林)
       - 塞浦路斯-1.84MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-190.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-231.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
